# ffi_ffigen_duktape_windows

./: README.md  ffigen.yaml  pubspec.yaml
lib/: main.dart
lib/bloc/: duktape_bloc.dart  duktape_bloc.freezed.dart  duktape_event.dart  duktape_state.dart
lib/ffi/: duktape_bindings_generated.dart  method_channel.dart
lib/getit/: configuration.config.dart  configuration.dart  modules.dart
src/: CMakeLists.txt
windows/: CMakeLists.txt
